# VRChat-AI

./: .env_example  .gitignore  BUILD  MODULE.bazel  README.md  docker-compose.yaml  launch_system.sh
backend/: README.md
backend/audio/stt/: BUILD
backend/audio/tts/: BUILD  main.py
backend/health/: BUILD  health_client.py
backend/text/: BUILD  main.py  server_lib.py
backend/text/sql/: schema.sql
jupyter/: BUILD  main.py
requirements/: requirements_audio_stt.in  requirements_audio_stt.txt  requirements_audio_tts.in  requirements_audio_tts.txt  requirements_health.in  requirements_health.txt  requirements_jupyter.in  requirements_jupyter.txt  requirements_text.in  requirements_text.txt
shared/proto/: BUILD
shared/proto/services/llm/: BUILD  llm.proto
shared/proto/services/stt/: stt.proto
shared/proto/utils/audio/: BUILD  audio.proto
shared/proto/utils/multimodal/: BUILD  multimodal.proto
shared/proto/utils/status/: BUILD  control.proto  status.proto
shared/proto/utils/text/: BUILD  text.proto
shared/proto/utils/vision/: image.proto
